# legate-dataframe

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPER_GUIDE.md  Dockerfile  README.md  VERSION  build.sh  dependencies.yaml  pyproject.toml  valgrind.suppressions
.github/: copy-pr-bot.yaml  pull_request_template.md
.github/workflows/: build.yaml  conda-python-build.yaml  conda-upload-packages.yaml  docs-build.yaml  pr.yaml
ci/: build_all.sh  build_docs.sh  manual-ci-test.py  run_ctests.sh  run_ctests_cpu.sh  run_ctests_gpu.sh  run_pytests.sh  run_pytests_cpu.sh  run_thirdparty_example.sh  test_all.sh  test_all_common.sh  test_cpu.sh  test_cpu_common.sh  test_gpu.sh  test_gpu_common.sh  upload-to-anaconda.sh
cmake/: config.json
conda/environments/: all_cuda-124_arch-x86_64.yaml
conda/recipes/legate-dataframe/: build.sh  conda_build_config.yaml  install_ctests.sh  install_legate-dataframe.sh  meta.yaml
cpp/: CMakeLists.txt
cpp/cmake/: fetch_rapids.cmake
cpp/cmake/Modules/: ConfigureCUDA.cmake
cpp/examples/: CMakeLists.txt  hello.cpp
cpp/include/legate_dataframe/: binaryop.hpp  csv.hpp  filling.hpp  groupby_aggregation.hpp  hashpartition.hpp  join.hpp  parquet.hpp  reduction.hpp  replace.hpp  sort.hpp  stream_compaction.hpp  timestamps.hpp  unaryop.hpp  utils.hpp
cpp/include/legate_dataframe/core/: allocator.hpp  column.hpp  library.hpp  nccl.hpp  null_mask.hpp  print.hpp  ranges.hpp  repartition_by_hash.hpp  scalar.hpp  table.hpp  task_argument.hpp  task_context.hpp  transposed_copy.cuh
cpp/src/: binaryop.cpp  csv.cpp  filling.cpp  groupby_aggregation.cpp  hashpartition.cpp  join.cpp  parquet.cpp  reduction.cpp  replace.cpp  sort.cpp  stream_compaction.cpp  timestamps.cpp  unaryop.cpp  utils.cpp
cpp/src/core/: allocator.cpp  column.cu  library.cpp  null_mask.cu  print.cpp  ranges.cu  repartition_by_hash.cu  scalar.cpp  table.cpp  task_argument.cpp  task_context.cpp  transposed_copy.cu
cpp/tests/: CMakeLists.txt  main.cpp  test_binaryop.cpp  test_column_names.cpp  test_csv.cpp  test_cudf_interop.cpp  test_filling.cpp  test_groupby_aggregation.cpp  test_join.cpp  test_parquet.cpp  test_reduction.cpp  test_repartition_by_hash.cpp  test_replace.cpp  test_slice.cpp  test_sort.cpp  test_stream_compaction.cpp  test_task.cpp  test_timestamps.cpp  test_unaryop.cpp  test_utils.hpp
docs/source/: DEVELOPER_GUIDE.md  conf.py  index.rst
docs/source/api/: column.rst  column_funcs.rst  index.rst  io.rst  table.rst  table_funcs.rst
python/: CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.py
python/benchmarks/: ibis_tpc-h.py  join.py
python/examples/: hello_world.py
python/legate_dataframe/: __init__.py  testing.py  utils.py
python/legate_dataframe/cmake/Modules/: LinkPyarrowHeaders.cmake
python/legate_dataframe/experimental_ibis/: __init__.py  executor.py  rewrites.py  schema.py  utils.py
python/legate_dataframe/ldf_polars/: __init__.py
python/legate_dataframe/ldf_polars/containers/: __init__.py  column.py  dataframe.py
python/legate_dataframe/ldf_polars/dsl/: __init__.py  expr.py  ir.py  to_ast.py  translate.py  traversal.py
python/legate_dataframe/ldf_polars/dsl/expressions/: __init__.py  aggregation.py  base.py  binaryop.py  datetime.py  literal.py  selection.py  slicing.py  unary.py
python/legate_dataframe/ldf_polars/typing/: __init__.py
python/legate_dataframe/ldf_polars/utils/: __init__.py  aggregations.py  dtypes.py  groupby.py  sorting.py  versions.py
python/legate_dataframe/lib/: CMakeLists.txt  __init__.pxd  binaryop.pyi  binaryop.pyx  csv.pyi  csv.pyx  groupby_aggregation.pyi  groupby_aggregation.pyx  join.pyi  join.pyx  parquet.pyi  parquet.pyx  reduction.pyi  reduction.pyx  replace.pyi  replace.pyx  sort.pyi  sort.pyx  stream_compaction.pyi  stream_compaction.pyx  timestamps.pyi  timestamps.pyx  unaryop.pyi  unaryop.pyx
python/legate_dataframe/lib/core/: CMakeLists.txt  __init__.py  column.pxd  column.pyi  column.pyx  data_type.pxd  data_type.pyx  legate.pxd  legate.pyx  legate_task.pxd  legate_task.pyx  logical_array.pxd  scalar.pxd  scalar.pyi  scalar.pyx  table.pxd  table.pyi  table.pyx
python/tests/: conftest.py  test_arrow.py  test_benchmarks.py  test_binaryop.py  test_column.py  test_csv.py  test_cudf.py  test_cunumeric.py  test_cupynumeric.py  test_examples.py  test_groupby_aggregation.py  test_ibis.py  test_join.py  test_parquet.py  test_reduction.py  test_replace.py  test_sort.py  test_stream_compaction.py  test_table.py  test_tasks.py  test_timestamps.py  test_unaryop.py  test_version.py
scripts/: run-cmake-format.sh
